[gd_scene load_steps=5 format=3 uid="uid://l38062djgpxk"]

[ext_resource type="Script" uid="uid://bimpm2g7vcrk" path="res://UI/UpgradeShopUI/shop.gd" id="1_oy471"]
[ext_resource type="PackedScene" uid="uid://bc2jtreq5e56n" path="res://UI/UpgradeShopUI/upgrade_card.tscn" id="2_f4anw"]
[ext_resource type="Texture2D" uid="uid://b3xunl8h7st88" path="res://UI/UpgradeShopUI/UpgradeSlot.png" id="3_3oog2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1g7c"]
size = Vector2(80, 80)

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_oy471")

[node name="FruitOverloadInfo" type="Label" parent="."]
offset_left = 40.0
offset_top = 40.0
offset_right = 422.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 51
text = "Fruit Overload: "

[node name="UpgradeCard" parent="." instance=ExtResource("2_f4anw")]
offset_left = 840.0
offset_top = 300.0
offset_right = 960.0
offset_bottom = 420.0

[node name="UpgradeSlot" type="Control" parent="."]
z_index = 5
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 0
offset_left = 580.0
offset_top = 380.0
offset_right = 660.0
offset_bottom = 460.0
scale = Vector2(1.4, 1.4)
pivot_offset = Vector2(40, 40)
mouse_filter = 2

[node name="SlotSprite" type="Sprite2D" parent="UpgradeSlot"]
position = Vector2(40, 40)
texture = ExtResource("3_3oog2")

[node name="Area2D" type="Area2D" parent="UpgradeSlot"]
position = Vector2(40, 40)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeSlot/Area2D"]
shape = SubResource("RectangleShape2D_s1g7c")

[node name="ContinueNextRound" type="Button" parent="."]
offset_left = 700.0
offset_top = 180.0
offset_right = 869.0
offset_bottom = 211.0
text = "Continue next round"

[node name="UpgradeCard2" parent="." instance=ExtResource("2_f4anw")]
offset_left = 240.0
offset_top = 300.0
offset_right = 360.0
offset_bottom = 420.0
upgrade_id = 1

[connection signal="pressed" from="ContinueNextRound" to="." method="_on_continue_next_round_pressed"]
